compiling_error.txt
C:\Users\KIIT\Desktop\master project\bo.c:1:3: error: stray '#' in program
 in#include <stdio.h>
   ^
C:\Users\KIIT\Desktop\master project\bo.c:1:1: error: unknown type name 'in'
 in#include <stdio.h>
 ^
C:\Users\KIIT\Desktop\master project\bo.c:1:12: error: expected '=', ',', ';', 'asm' or '__attribute__' before '<' token
 in#include <stdio.h>
            ^
